syntax = "proto3";

package minion;

option go_package = "github.com/bbruun/bbruun/galt/proto;proto";

service MinionService {
    // This one is just for testing
    // rpc Create (CreateMinion) returns (MinionCreateResponse) {}
    rpc RegisterNewMinion (CreateMinion) returns (MinionCreateResponse) {}
    rpc GetCommands (stream CommandFromMinion) returns (stream CommandToMinion) {}
}

message CreateMinion {
    string name = 1;
}

message MinionCreateResponse {
    bool authenticated = 1;
    int64 minionId = 2;
    string registeredname = 3;
}

message CommandToMinion {
    string time = 1;            // Time time as a string
    bool scheduletask = 2;      // Don't wait to execute it now
    int64 timeout = 3;          // to be used later
    string commandtype = 4;     // the command type (based on structs)
    string marshaledcommand = 5;  // The marshaled struct
}

message CommandFromMinion {
    bool readytoreceive = 1; // True == client will accept a new command
    string result = 2;       // The stdout/stderr output from the client
    bool success = 3;        // Was the command successful
}